# SovereignJedi

./: .eslintrc.json  .gitignore  Anchor.toml  ENVIRONMENT.md  Qualification_Task3.md  README.md  Task07-qualification-prerequis.md  dev.sh  fichier.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml
General/: agent-onboarding-pack.md  reviewer-agent-pack.md
apps/web/: next.config.js  package.json  tsconfig.json
apps/web/pages/: _app.tsx  _document.tsx  index.tsx
apps/web/pages/dev/: crypto-smoke.tsx
apps/web/public/libsodium/: SYNC-METADATA.json
apps/web/src/: shims-sj.d.ts
apps/web/src/types/: react-dom-client.d.ts  (+1 more)
apps/web/tests/: E01-T07-OQ13-secrets-not-persisted.test.ts  E01-T07-OQ16-restore-latency.test.ts  retry.test.ts  wallet.test.ts
docs/: Rapport de Qualification - Etape 4.md
docs/tasks/: T03-5-D001-progdec.md  T04-D001-progdec.md  T04-D002-progdec-.md  T04-D003-progdec.md  T05-D001-progdec.md  T06-D001-progdec.md  T07-D001-progdec.md  task-02.md  task-03-wallet-connection.md  task-04.md  task-05.md  task-06.md  task-07.md
evidence/: procedure-de-qualification.md
evidence/episode-01/task-07/: E01-T07-qualification-audit.md  E01-T07-qualification-summary.md
evidence/task-07/: GQ-01-build.txt  GQ-02-toolchain.txt  GQ-03-reviewer.md
infra/ipfs/: docker-compose.yml
programs/sj_registry_program/: Cargo.lock.bak  Cargo.toml
programs/sj_registry_program/.cargo/: config.toml
programs/sj_registry_program/src/: lib.rs
scripts/: dump_registry.mjs  fichier.txt  package.json  sync-libsodium.js
(+47 files in other folders)
