[package]
name = "sj_registry_program"
version = "0.1.0"
description = "Sovereign Jedi Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sj_registry_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
solana-program = "2.1.0"
